Adds special, tolerant to singular matrix processing, to the case when ImageMatrix is differs from the CTM by the translation vector only, which happens in cached character rendering. The patch clears PostScript errors during text rendering with singular CTM. Bug 690179, customer 870.

DIFFERENCES:
None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9253 a1074d23-0009-0410-80fe-cf8c14f379e6